Add promo code support to checkout
